# tplat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  templatenator.cpp
.devcontainer/: Dockerfile  devcontainer.json
examples/: all.cpp
include/tplat/: array_as_string_view.hxx  array_chars_from_integral.hxx  array_from_param_pack.hxx  array_join.hpp  array_join.hxx  array_multijoin.hpp  array_multijoin.hxx
include/tplat/conv/: ArrayToStringView.hpp  IntegerToChars.hpp  ParameterPackToArray.hpp
test/: TestArrayToStringView.cpp  TestIntegerToChars.cpp  test_array_as_string_view.cxx  test_array_chars_from_integral.cxx
